%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: BlendTreeAnimator
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: Speed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: AngularSpeed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Shot
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Chase
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: AimWeight
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
  - serializedVersion: 3
    m_Name: Shooting
    m_StateMachine: {fileID: 110731261}
    m_Mask: {fileID: 101100000, guid: 7672d8e3047f3427fb3d94224a07b37a, type: 2}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
  - serializedVersion: 3
    m_Name: Gun
    m_StateMachine: {fileID: 110771589}
    m_Mask: {fileID: 101100000, guid: 0d765953ca4274e6a82459e06734d376, type: 2}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &20600000
BlendTree:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Locomotion
  m_Childs:
  - m_Motion: {fileID: 7400000, guid: dffa50cfe77e0434bbfa71245b3dd529, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400000, guid: b1a5e04ae51004842aba06704a6c2903, type: 3}
    m_Threshold: .0394736864
    m_Position: {x: -.00915313978, y: 1.55574799}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400000, guid: 1cb8ed3cbba15f0479fbae54e0a963df, type: 3}
    m_Threshold: .0789473727
    m_Position: {x: 0, y: 5.66774893}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400014, guid: 4ee731d726c3dd34eb36806ea0d8fe98, type: 3}
    m_Threshold: .118421063
    m_Position: {x: -2.4650619, y: .216123298}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400012, guid: 4ee731d726c3dd34eb36806ea0d8fe98, type: 3}
    m_Threshold: .157894745
    m_Position: {x: -2.12410593, y: .198304698}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400010, guid: 4ee731d726c3dd34eb36806ea0d8fe98, type: 3}
    m_Threshold: .197368428
    m_Position: {x: -1.39122403, y: .140392393}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400008, guid: 4ee731d726c3dd34eb36806ea0d8fe98, type: 3}
    m_Threshold: .236842126
    m_Position: {x: -.827816784, y: .175345793}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400002, guid: 4ee731d726c3dd34eb36806ea0d8fe98, type: 3}
    m_Threshold: .276315808
    m_Position: {x: .827816784, y: .175345793}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400000, guid: 4ee731d726c3dd34eb36806ea0d8fe98, type: 3}
    m_Threshold: .315789491
    m_Position: {x: 1.39122403, y: .140392393}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400004, guid: 4ee731d726c3dd34eb36806ea0d8fe98, type: 3}
    m_Threshold: .355263174
    m_Position: {x: 2.12410593, y: .198304698}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400006, guid: 4ee731d726c3dd34eb36806ea0d8fe98, type: 3}
    m_Threshold: .394736856
    m_Position: {x: 2.4650619, y: .216123298}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400000, guid: bb141fc9a700c9c4ca7e6dadb8acf24b, type: 3}
    m_Threshold: .434210539
    m_Position: {x: -1.76865602, y: 1.70155001}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400002, guid: 6da89662649b53c49b06616f51157b48, type: 3}
    m_Threshold: .473684251
    m_Position: {x: -1.08886302, y: 1.54714596}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400002, guid: 6bb9737c88e5309458a1e0e764137dfd, type: 3}
    m_Threshold: .513157904
    m_Position: {x: -.4916282, y: 1.42626798}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400000, guid: 6bb9737c88e5309458a1e0e764137dfd, type: 3}
    m_Threshold: .552631617
    m_Position: {x: .4913463, y: 1.42626798}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400000, guid: 6da89662649b53c49b06616f51157b48, type: 3}
    m_Threshold: .592105269
    m_Position: {x: 1.08886302, y: 1.54714596}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400002, guid: bb141fc9a700c9c4ca7e6dadb8acf24b, type: 3}
    m_Threshold: .631578982
    m_Position: {x: 1.76865602, y: 1.70155001}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400002, guid: f2bed5dc5afacff44a00de8daae9703b, type: 3}
    m_Threshold: .671052694
    m_Position: {x: -2.32107496, y: 5.25069904}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400002, guid: 1062212255550964e974f3ffb3cbaae3, type: 3}
    m_Threshold: .710526347
    m_Position: {x: -1.68378901, y: 5.66619015}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400000, guid: 1062212255550964e974f3ffb3cbaae3, type: 3}
    m_Threshold: .75
    m_Position: {x: 1.68378901, y: 5.66619015}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 0}
    m_Threshold: .789473712
    m_Position: {x: 2.32107496, y: 5.25069904}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  m_BlendParameter: AngularSpeed
  m_BlendParameterY: Speed
  m_MinThreshold: 0
  m_MaxThreshold: .789473712
  m_UseAutomaticThresholds: 1
  m_BlendType: 3
--- !u!1101 &110100000
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110295486}
  m_DstState: {fileID: 110206954}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Shot
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110157300
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110206954}
  m_DstState: {fileID: 110282373}
  m_TransitionDuration: .15625
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Shot
    m_EventTreshold: 0
    m_ExitTime: .84375
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110170191
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110282373}
  m_DstState: {fileID: 110285157}
  m_TransitionDuration: .182926789
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Shot
    m_EventTreshold: 0
    m_ExitTime: .817073226
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110193161
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110285157}
  m_DstState: {fileID: 110295486}
  m_TransitionDuration: .117187493
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Shot
    m_EventTreshold: 0
    m_ExitTime: .8828125
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Locomotion
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 20600000}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 228, y: 24, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110206954
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: WeaponRaise
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 5a91f67895dacab46bf50935334f3977, type: 3}
  m_ParentStateMachine: {fileID: 110731261}
  m_Position: {x: 312, y: -24, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110282373
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: WeaponShoot
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: b157cdcdb0f1cbe4dad60f2bfe986755, type: 3}
  m_ParentStateMachine: {fileID: 110731261}
  m_Position: {x: 96, y: 108, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110285157
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: WeaponLower
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 2ec4bde4760ff6649a9ebe052624c435, type: 3}
  m_ParentStateMachine: {fileID: 110731261}
  m_Position: {x: -72, y: -24, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110289932
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Gripped
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 3974b181f8f59754ca61fd0985a39b73, type: 3}
  m_ParentStateMachine: {fileID: 110771589}
  m_Position: {x: 314, y: -61, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110295486
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Empty
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 110731261}
  m_Position: {x: 108, y: -144, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110200000}
  m_States:
  - {fileID: 110200000}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 110200000}
      second: []
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
--- !u!1107 &110731261
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Shooting
  m_DefaultState: {fileID: 110295486}
  m_States:
  - {fileID: 110295486}
  - {fileID: 110206954}
  - {fileID: 110282373}
  - {fileID: 110285157}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 110285157}
      second:
      - {fileID: 110193161}
    data:
      first: {fileID: 110282373}
      second:
      - {fileID: 110170191}
    data:
      first: {fileID: 110206954}
      second:
      - {fileID: 110157300}
    data:
      first: {fileID: 110295486}
      second:
      - {fileID: 110100000}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: -252, y: -36, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
--- !u!1107 &110771589
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Gun
  m_DefaultState: {fileID: 110289932}
  m_States:
  - {fileID: 110289932}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 110289932}
      second: []
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 0, y: -48, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
